--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         </h3>
       </div>
       <div class="board">
-        <div class="square" id="square1"></div>
-        <div class="square" id="square2"></div>
-        <div class="square" id="square3"></div>
-        <div class="square" id="square4"></div>
-        <div class="square" id="square5"></div>
-        <div class="square" id="square6"></div>
-        <div class="square" id="square7"></div>
-        <div class="square" id="square8"></div>
-        <div class="square" id="square9"></div>
+        <div class="square square0" id="0"></div>
+        <div class="square square1" id="1"></div>
+        <div class="square square2" id="2"></div>
+        <div class="square square3" id="3"></div>
+        <div class="square square4" id="4"></div>
+        <div class="square square5" id="5"></div>
+        <div class="square square6" id="6"></div>
+        <div class="square square7" id="7"></div>
+        <div class="square square8" id="8"></div>
       </div>
     </div>
   </body>
