points board linked for first play

--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <title>Noughts & Crosses</title>
-  </head>
-  <body>
-    <div class="container">
-      <header><h1>Noughts & Crosses</h1></header>
-      <div class="instructions">
-        <p>To win you need to get 3 in a row, column or diagonal.</p>
-      </div>
-      <!-- <div class="scores">
-        <div class="player playerX">
-          <h2>X</h2>
-          <div class="score" id="scoreX">
-            3
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="main.css" />
+  <title>Noughts & Crosses</title>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>Noughts & Crosses</h1>
+    </header>
+    <div class="instructions">
+      <p>To win you need to get 3 in a row, column or diagonal.</p>
+    </div>
+    <div class="scores">
+      <div class="player playerX">
+        <h2>X</h2>
+        <div class="score" id="scoreX">
+          -
         </div>
-        <div class="player playerO">
-          <h2>O</h2>
-          <div class="score" id="scoreO">
-            2
-          </div>
-        </div>
-      </div> -->
-      <div>
-        <h3 id="message">
-          X gets to start!
-        </h3>
       </div>
-      <div class="board">
-        <div class="square square0" id="0"></div>
-        <div class="square square1" id="1"></div>
-        <div class="square square2" id="2"></div>
-        <div class="square square3" id="3"></div>
-        <div class="square square4" id="4"></div>
-        <div class="square square5" id="5"></div>
-        <div class="square square6" id="6"></div>
-        <div class="square square7" id="7"></div>
-        <div class="square square8" id="8"></div>
+      <div class="player playerO">
+        <h2>O</h2>
+        <div class="score" id="scoreO">
+          -
+        </div>
       </div>
     </div>
-  </body>
-  <script src="./index.js"></script>
+    <div>
+      <h3 id="message">
+        X gets to start!
+      </h3>
+    </div>
+    <div class="board">
+      <div class="square square0" id="0"></div>
+      <div class="square square1" id="1"></div>
+      <div class="square square2" id="2"></div>
+      <div class="square square3" id="3"></div>
+      <div class="square square4" id="4"></div>
+      <div class="square square5" id="5"></div>
+      <div class="square square6" id="6"></div>
+      <div class="square square7" id="7"></div>
+      <div class="square square8" id="8"></div>
+    </div>
+  </div>
+</body>
+<script src="./index.js"></script>
+
 </html>
